Refactor of Appending Data & Appending Saved Data

--- a/src/template.html
+++ b/src/template.html
@@ -37,19 +37,19 @@
             </div>
             <div>
                 <label for="dueDate">
-                    Number of Pages:
+                    Due Date:
                     <input type="datetime-local" id="dueDate">
                 </label>
             </div>
             <div>
                 <label for="priority">
-                    Number of Pages:
+                    Priority
                     <input type="text" id="priority">
                 </label>
             </div>
             <div>
                 <label for="notes">
-                    Number of Pages:
+                    Notes:
                     <input type="text" id="notes">
                 </label>
             </div>  
