Delete Todo Html

--- a/src/template.html
+++ b/src/template.html
@@ -31,7 +31,7 @@
             </div>
             <div>
                 <label for="description">
-                    Author:
+                    Description:
                     <input type="text" id="description">
                 </label>
             </div>
@@ -55,7 +55,7 @@
             </div>  
             <div>
                 <label for="checklist">
-                    Has Read:
+                    Checklist:
                     <input class="dialogCheckbox" type="checkbox" data-val="true" value="true" id="checklist">
                 </label>
             </div>
