Due Date Status

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="today"></div>
     <button class="newProject">New Project</button>
     <dialog class="projectDialog">
         <form action="">
@@ -38,7 +39,13 @@
             <div>
                 <label for="dueDate">
                     Due Date:
-                    <input type="datetime-local" id="dueDate">
+                    <input type="date" id="dueDate">
+                </label>
+            </div>
+            <div>
+                <label for="time">
+                    Due Date:
+                    <input type="time" id="time">
                 </label>
             </div>
             <div>
