Display of undefined values & dialog clearing

--- a/src/template.html
+++ b/src/template.html
@@ -70,7 +70,7 @@
             </div>
             <div>
                 <button value="cancel" formmethod="dialog">Close</button>
-                <button id="confirmTodos">Confirm</button>
+                <button id="confirmTodo">Confirm</button>
             </div>
         </form>
     </dialog>
