--- a/src/template.html
+++ b/src/template.html
@@ -23,34 +23,23 @@
             <div class="projectMain">
                 <div class="projectTitle">Groceries</div>
                 <button class="editProject"><img src="svg/edit.svg"></button>
+                <button class="newTodo"><img src="svg/plus-circle.svg"></button>
                 <button class="deleteProject"><img src="svg/trash.svg"></button>
             </div>
             <div class="todoList">
-                <div class="todo">
-                    <input type="checkbox" class="checklist">
-                    <div class="todoInfo">
-                        <div class="title">Cheese</div>
-                        <div class="description">Blue Cheese</div>
-                        <div class="dueDate">8:00pm</div>
-                    </div>
-                    <div class="todoButtons">
-                        <button class="editTodo"><img src="svg/more-horizontal.svg"></button>
-                        <button class="deleteTodo"><img src="svg/trash-2.svg"></button>
-                    </div>
-                </div>
-                <div class="todo">
-                    <input type="checkbox" class="checklist">
-                    <div class="todoInfo">
-                        <div class="title">Cheese</div>
-                        <div class="description">Blue Cheese</div>
-                        <div class="dueDate">8:00pm</div>
-                    </div>
-                    <div class="todoButtons">
-                        <button class="editTodo"><img src="svg/more-horizontal.svg"></button>
-                        <button class="deleteTodo"><img src="svg/trash-2.svg"></button>
-                    </div>
-                </div>
             </div>
+        </div>
+    </div>
+    <div class="todo">
+        <input type="checkbox" class="checklist">
+        <div class="todoInfo">
+            <div class="title">Cheese</div>
+            <div class="description">Blue Cheese</div>
+            <div class="dueDate">8:00pm</div>
+        </div>
+        <div class="todoButtons">
+            <button class="editTodo"><img src="svg/more-horizontal.svg"></button>
+            <button class="deleteTodo"><img src="svg/trash-2.svg"></button>
         </div>
     </div>
     <dialog class="projectDialog">
