--- a/src/template.html
+++ b/src/template.html
@@ -85,7 +85,11 @@
             <div>
                 <label for="priority">
                     Priority
-                    <input type="text" id="priority">
+                    <select name="priority" id="priority">
+                        <option value="3">Urgent</option>
+                        <option value="2">Important</option>
+                        <option value="1">Low Priority</option>
+                    </select>
                 </label>
             </div>
             <div>
