Deselect Priority, Checklist

--- a/src/template.html
+++ b/src/template.html
@@ -86,6 +86,7 @@
                 <label for="priority">
                     Priority
                     <select name="priority" id="priority">
+                        <option value="">None</option>
                         <option value="3">Urgent</option>
                         <option value="2">Important</option>
                         <option value="1">Low Priority</option>
@@ -96,12 +97,6 @@
                 <label for="notes">
                     Notes:
                     <input type="text" id="notes">
-                </label>
-            </div>  
-            <div>
-                <label for="checklist">
-                    Checklist:
-                    <input class="dialogCheckbox" type="checkbox" data-val="true" value="true" id="checklist">
                 </label>
             </div>
             <div>
